--- a/source/navigate/cn/about.html
+++ b/source/navigate/cn/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>WebStack.cc - 设计师网址导航</title>
+    <title>网址导航</title>
     <meta name="keywords" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
     <meta name="description" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
     <link rel="shortcut icon" href="../assets/images/favicon.png">
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="navbar-mobile-clear"></div>
-            <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+            <a href="https://github.com/szj2ys" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         </div>
     </nav>
     <div class="page-container">
@@ -73,10 +73,9 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <blockquote>
-                                        <p>有一段时间我发现我的收藏夹越来越多，很难找到某个不常用的网站。所以就有了这个网站，这里收集的基本都是我自己浏览器收藏夹里的网站，我平时用的相对比较多的一些都在这里。</p>
+                                        <p>有一段时间我发现我的收藏夹越来越多，很难管理。所以就有了这个网站，我在这里收集了一些非常有用的网站，就当自己的收藏夹了。</p>
                                         </br>
-                                        <p>如果你也是设计师，如果你也正好喜欢设计，那希望这个网站能给你带来一些作用。</p>
-                                        <p>闲聊或者有任何建议都可以加QQ群交流，一群：<strong>304584722</strong>  二群：<strong>740911918</strong></p>
+                                        <p>如果这个网站也能给你带来一些作用那就太好啦。</p>
                                     </blockquote>
                                 </div>
                             </div>
@@ -87,13 +86,13 @@
                                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.viggoz.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.viggoz.com/">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
-                                                <img src="../assets/images/logos/viggoz.png" class="img-circle" width="40">
+                                                <img src="https://www.songzhijun.com/img/avatar.png" class="img-circle" width="40">
                                             </a>
                                             <div class="xe-comment">
                                                 <a href="#" class="xe-user-name overflowClip_1">
-                                                    <strong>Designer. Viggo.</strong>
+                                                    <strong>SongZhiJun</strong>
                                                 </a>
-                                                <p class="overflowClip_2"> Full-time UI designer with an enduring interest in Coding.</p>
+                                                <p class="overflowClip_2"> Full-time Programer with an enduring interest in Open Source.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -104,7 +103,7 @@
                                             <br />
                                             <blockquote>
                                                 <p>
-                                                    这是一个公益项目，而且是<a href="https://github.com/WebStackPage/WebStackPage.github.io"> 开源 </a>的。你也可以拿来制作自己的网址导航。如果你有更好的想法，可以通过个人网站<a href="http://www.viggoz.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">viggoz.com</span></a>中的联系方式找到我，欢迎与我交流分享。
+                                                    这是一个开放的网站导航项目。你可以通过个人网站<a href="https://www.songzhijun.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">https://www.songzhijun.com</span></a>中的联系方式找到我，欢迎与我交流分享。
                                                 </p>
                                             </blockquote>
                                         </div>
