--- a/source/navigate/cn/index.html
+++ b/source/navigate/cn/index.html
@@ -314,12 +314,11 @@
                 </ul>
                 <ul class="user-info-menu right-links list-inline list-unstyled">
                     <li class="hidden-sm hidden-xs">
-                        <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank">
+                        <a href="https://github.com/szj2ys" target="_blank">
                             <i class="fa-github"></i>  GitHub
                         </a>
                     </li>
                 </ul>
-                <!-- <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> -->
 
             </nav>
             <!-- 常用推荐 -->
@@ -4216,8 +4215,8 @@
                 <div class="footer-inner">
                     <!-- Add your copyright text here -->
                     <div class="footer-text">
-                        &copy; 2017-2020
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a>
+                        &copy; 2020-2021
+                        <a href="../cn/about.html"><strong>SongZhiJun</strong></a> design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a>
                         <!--  - Purchase for only <strong>23$</strong> -->
                     </div>
                     <!-- Go to Top Link, just add rel="go-top" to any link to add this functionality -->
