--- a/source/navigate/cn/index.html
+++ b/source/navigate/cn/index.html
@@ -300,7 +300,7 @@
                         </a>
                         <ul class="dropdown-menu languages">
                             <li>
-                                <a href="../en/index.html">
+                                <a href="../cn/index.html">
                                     <img src="../assets/images/flags/flag-us.png" alt="flag-us" /> English
                                 </a>
                             </li>
